@@ -30,7 +30,8 @@ science_off-points=The number of Science off points for the science used this se
 science_off-points-target=The target count of Science off points to match consumption from the target run data.
 
 [shortcut-name]
-science_off-score_toggle=Toggle science usage points GUI
+science_off-score_toggle=Toggle science off points GUI
+science_off-score_value_toggle=Toggle science off value list
 
 [gui-caption]
 science_off-score_title-label=Science Off Score
